# checkers-move-generator

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  benchmark.cpp  bitboard.cpp  bitboard.hpp  moveGenerator.cpp  moveGenerator.hpp
test/: CMakeLists.txt  bitboardTests.cpp  perft.cpp
